@@ -1,3 +1,3 @@
 #!/bin/bash
-java -jar ./launch4j/launch4j.jar peakaboo.xml
+java --illegal-access=permit -jar ./launch4j/launch4j.jar peakaboo.xml 
 mv "./build/Peakaboo.exe" "./build/Peakaboo $1.exe"
